
cc_library(
	name = "multiprecision",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_math//:math",
		"@com_github_bazelboost_mpl//:mpl",
		"@com_github_bazelboost_array//:array",
		"@com_github_bazelboost_functional//:functional",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_integer//:integer",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_predef//:predef",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_lexical_cast//:lexical_cast",
		"@com_github_bazelboost_smart_ptr//:smart_ptr",
		"@com_github_bazelboost_random//:random",
		"@com_github_bazelboost_throw_exception//:throw_exception",
		"@com_github_bazelboost_rational//:rational"
	],
)
