load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "multiprecision",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(["include/boost/**/*.hpp"]),
    deps = [
        "@boost//libs/math",
        "@boost//libs/throw_exception",
        "@boost//libs/container_hash",
        "@boost//libs/atomic",
        "@boost//libs/integer",
        "@boost//libs/predef",
        "@boost//libs/utility",
        "@boost//libs/config",
        "@boost//libs/type_traits",
        "@boost//libs/mpl",
        "@boost//libs/smart_ptr",
        "@boost//libs/lexical_cast",
        "@boost//libs/rational",
    ],
)
